# s3_based_redis_cache

./: README.md  benchmark.py  benchmark_results.csv  plot_benchmark.py  pyproject.toml
.github/workflows/: main.yml  release.yml
src/s3cache/: __init__.py  decorator.py  key.py  manager.py  serializer.py
src/s3cache/storage/: __init__.py  base.py  local.py  s3.py
tests/: conftest.py  test_decorator.py  test_key.py  test_manager.py  test_serializer.py  test_storage.py
