[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-s3-cache"
dynamic = ["version"]
description = "Decorator-based caching with Redis metadata and S3 storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Pravin Suthar" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis>=5.0",
    "boto3>=1.34",
    "zstandard>=0.22",
]

[project.urls]
Repository = "https://github.com/pravinsuthar/s3_based_redis_cache"

[project.optional-dependencies]
dataframe = ["pandas>=2.0", "pyarrow>=14.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "fakeredis>=2.21",
    "ruff>=0.3",
    "mypy>=1.8",
    "boto3-stubs[s3]>=1.34",
    "types-redis>=4.6",
    "pandas-stubs>=2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[tool.hatch.version]
path = "src/s3cache/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/s3cache"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.9"
mypy_path = "src"
packages = ["s3cache"]

[[tool.mypy.overrides]]
module = ["fakeredis.*", "zstandard.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=s3cache --cov-report=term-missing"
